--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Google Fonts</title>
     <link rel="stylesheet" href="./style.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
 
