change cursor as a pointer when hover over the icons

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-color">
+            <div class="bg-color cursor">
                 <div class="color-white"></div>  
                 <div class="color-black"></div>  
             </div>
-            <div class="list-area" id="list-icon">
+            <div class="list-area cursor" id="list-icon">
                 <img src="./images/list1.svg" alt="list icon" id="list-change-1">
             </div>
-            <div class="reset-area" id="reset-icon">
+            <div class="reset-area cursor" id="reset-icon">
                 <img src="./images/undo-arrow.svg" alt="reset icon">
             </div>
         </div>
